# Population

./: .gitignore  CLAUDE.md  pyproject.toml
configs/: default.yaml  pyramid_example.yaml
src/population/: __init__.py  __main__.py  cli.py  distributions.py  model.py  mortality.py  reporting.py  visualization.py
