[project]
name = "population"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24,<2.0",
    "matplotlib>=3.9",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
]

[project.scripts]
population = "population.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/population"]
